src/test/resources/error/adderror.spl

def getData() {
    return  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

def main() {
    b = 1
    print(getData() + b)
}


main()
